--- a/.github/workflow/deploy_backend.yml
+++ b/.github/workflow/deploy_backend.yml
@@ -15,6 +15,6 @@ jobs:
         with:
           node-version: '20'
       - name: Install Dependencies
-        run: npm Install
+        run: npm install
       - name: Run Build
         run : npm run build
