--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -21,5 +21,5 @@ jobs:
           node-version: '22'
       - name: Install Dependencies
         run: npm install
-      - name: Run Build
-        run : npm run build
+      - name: Verify server starts
+        run : node server.js & sleep 5
