--- a/.github/workflows/build_frontend.yml
+++ b/.github/workflows/build_frontend.yml
@@ -1,18 +1,19 @@
-name: Backend Ci Pipeline
+name : Build Pipeline for Frontend
+
 on:
   pull_request:
     branches: [ main ]
     paths:
-      - 'backend/**'
+      - 'frontend/**'
+
 
 jobs:
-  build:
-    name: Build the Project
+  build: 
+    name: Build the Frontend Project
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./backend
-
+        working-directory: ./frontend
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js
@@ -21,5 +22,20 @@ jobs:
           node-version: '22'
       - name: Install Dependencies
         run: npm install
-      - name: Verify server starts
-        run : node server.js & sleep 5
+      - name: Run Build
+        run: npm run build
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
