--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -2,6 +2,8 @@ name: Build and Deploy to Docker Hub
 on:
   push:
     branches: [ main ]
+    paths:
+      - 'frontend/**'
 
 jobs:
   build-and-push:
